[gd_scene load_steps=5 format=3 uid="uid://djp7plyxr7btb"]

[ext_resource type="Script" path="res://scenes_scripts/sociogramme.gd" id="1_qyjfd"]
[ext_resource type="Script" path="res://scenes_scripts/listes_binomes.gd" id="2_kjlny"]
[ext_resource type="Script" path="res://scenes_scripts/groupes_scroll.gd" id="3_wpyni"]
[ext_resource type="PackedScene" uid="uid://dbhr1gmquydx1" path="res://scenes_scripts/pop_up_aide.tscn" id="4_gkann"]

[node name="Sociogramme" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qyjfd")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.23
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ListesBinomes" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_kjlny")

[node name="GenererBinomes" type="Button" parent="HBoxContainer/MarginContainer/ListesBinomes"]
layout_mode = 2
size_flags_horizontal = 4
text = "O21_G_BINOMES"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/MarginContainer/ListesBinomes"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/v_separation = 0
columns = 3

[node name="Eviter" type="Label" parent="HBoxContainer/MarginContainer/ListesBinomes/GridContainer"]
layout_mode = 2
text = "O22_EVITER"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/MarginContainer/ListesBinomes/GridContainer"]
layout_mode = 2

[node name="Favoriser" type="Label" parent="HBoxContainer/MarginContainer/ListesBinomes/GridContainer"]
layout_mode = 2
text = "O22_FAVORISER"
horizontal_alignment = 1

[node name="GroupesNegatifs" type="RichTextLabel" parent="HBoxContainer/MarginContainer/ListesBinomes/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = " "
autowrap_mode = 0
script = ExtResource("3_wpyni")

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/MarginContainer/ListesBinomes/GridContainer"]
layout_mode = 2

[node name="GroupesPositifs" type="RichTextLabel" parent="HBoxContainer/MarginContainer/ListesBinomes/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = " "
autowrap_mode = 0
script = ExtResource("3_wpyni")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.77
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 6

[node name="Tracer" type="Button" parent="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "O23_G_SOCIO"

[node name="PopUpAide" parent="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/Tracer" instance=ExtResource("4_gkann")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
grow_horizontal = 1
grow_vertical = 1
text = "O23_TOOLTIP"

[node name="AfficherCouleurs" type="Button" parent="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "O25_POSITIF"

[node name="ExporteVersPlan" type="Button" parent="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "O24_VALIDER"

[node name="PopUpAide" parent="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/ExporteVersPlan" instance=ExtResource("4_gkann")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
grow_horizontal = 1
grow_vertical = 1
text = "O24_TOOLTIP"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Conseils" type="RichTextLabel" parent="HBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "O26_CONSEILS"
fit_content = true
autowrap_mode = 2

[node name="PorteLignes" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PorteLabels" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="generer_presse" from="HBoxContainer/MarginContainer/ListesBinomes" to="." method="_on_listes_binomes_generer_presse"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/ListesBinomes/GenererBinomes" to="HBoxContainer/MarginContainer/ListesBinomes" method="_on_generer_binomes_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/Tracer" to="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/Tracer/PopUpAide" method="survol"]
[connection signal="mouse_exited" from="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/Tracer" to="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/Tracer/PopUpAide" method="perte_survol"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/Tracer" to="." method="_on_tracer_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/Tracer" to="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/Tracer/PopUpAide" method="perte_survol"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/AfficherCouleurs" to="." method="_on_afficher_couleurs_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/ExporteVersPlan" to="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/ExporteVersPlan/PopUpAide" method="survol"]
[connection signal="mouse_exited" from="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/ExporteVersPlan" to="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/ExporteVersPlan/PopUpAide" method="perte_survol"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/ExporteVersPlan" to="." method="_on_exporte_vers_plan_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/ExporteVersPlan" to="HBoxContainer/MarginContainer2/HBoxContainer2/HBoxContainer/ExporteVersPlan/PopUpAide" method="perte_survol"]
